feat: update servlet with model entities